--- a/stm32f429_ugreen_dab.ioc
+++ b/stm32f429_ugreen_dab.ioc
@@ -10,7 +10,9 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI3
 Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP5=USB_DEVICE
+Mcu.IP6=USB_OTG_HS
+Mcu.IPNb=7
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -112,7 +114,8 @@ Mcu.Pin95=PE0
 Mcu.Pin96=PE1
 Mcu.Pin97=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin98=VP_SYS_VS_tim1
-Mcu.PinsNb=99
+Mcu.Pin99=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.PinsNb=100
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -124,6 +127,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_HS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -266,6 +270,7 @@ PB13.GPIO_Label=VBUS_HS
 PB13.GPIO_Mode=GPIO_MODE_INPUT
 PB13.GPIO_PuPd=GPIO_NOPULL
 PB13.Locked=true
+PB13.Mode=Activate_VBUS_FS
 PB13.Signal=USB_OTG_HS_VBUS
 PB14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB14.GPIO_Label=OTG_HS_DM
@@ -273,6 +278,7 @@ PB14.GPIO_Mode=GPIO_MODE_AF_PP
 PB14.GPIO_PuPd=GPIO_NOPULL
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB14.Locked=true
+PB14.Mode=Device_Only_FS
 PB14.Signal=USB_OTG_HS_DM
 PB15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB15.GPIO_Label=OTG_HS_DP
@@ -280,6 +286,7 @@ PB15.GPIO_Mode=GPIO_MODE_AF_PP
 PB15.GPIO_PuPd=GPIO_NOPULL
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB15.Locked=true
+PB15.Mode=Device_Only_FS
 PB15.Signal=USB_OTG_HS_DP
 PB2/BOOT1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB2/BOOT1.GPIO_Label=BOOT1
@@ -794,43 +801,42 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI3_Init-SPI3-false-HAL-true
-RCC.48MHZClocksFreq_Value=51428571.428571425
-RCC.AHBFreq_Value=180000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI3_Init-SPI3-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+RCC.48MHZClocksFreq_Value=48000000
+RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=45000000
-RCC.APB1TimFreq_Value=90000000
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=90000000
-RCC.APB2TimFreq_Value=180000000
-RCC.CortexFreq_Value=180000000
-RCC.EthernetFreq_Value=180000000
-RCC.FCLKCortexFreq_Value=180000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=168000000
+RCC.CortexFreq_Value=168000000
+RCC.EthernetFreq_Value=168000000
+RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=180000000
+RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 RCC.LCDTFTFreq_Value=24500000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=180000000
-RCC.PLLCLKFreq_Value=180000000
+RCC.MCO2PinFreq_Value=168000000
+RCC.PLLCLKFreq_Value=168000000
 RCC.PLLM=4
-RCC.PLLN=180
+RCC.PLLN=168
 RCC.PLLQ=7
-RCC.PLLQCLKFreq_Value=51428571.428571425
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLQCLKFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI_AClocksFreq_Value=24500000
 RCC.SAI_BClocksFreq_Value=24500000
-RCC.SYSCLKFreq_VALUE=180000000
+RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=360000000
+RCC.VCOOutputFreq_Value=336000000
 RCC.VCOSAIOutputFreq_Value=98000000
 RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VCOSAIOutputFreq_ValueR=49000000
@@ -919,15 +925,23 @@ SH.GPXTI2.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI3.CalculateBaudRate=5.625 MBits/s
+SPI3.CalculateBaudRate=5.25 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+USB_DEVICE.CLASS_NAME_HS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_HS,VirtualModeHS,CLASS_NAME_HS
+USB_DEVICE.VirtualMode-CDC_HS=Cdc
+USB_DEVICE.VirtualModeHS=Cdc_HS
+USB_OTG_HS.IPParameters=VirtualMode-Device_Only_FS
+USB_OTG_HS.VirtualMode-Device_Only_FS=Device_Only_FS
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=STM32F429I-DISC1
 boardIOC=true
 isbadioc=false
