--- a/stm32f429_ugreen_dab.ioc
+++ b/stm32f429_ugreen_dab.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.IPParameters=Tasks01
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -18,6 +19,7 @@ Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
 Mcu.Pin10=PF9
+Mcu.Pin100=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin11=PF10
 Mcu.Pin12=PH0/OSC_IN
 Mcu.Pin13=PH1/OSC_OUT
@@ -78,44 +80,44 @@ Mcu.Pin62=PG7
 Mcu.Pin63=PG8
 Mcu.Pin64=PC6
 Mcu.Pin65=PC7
-Mcu.Pin66=PC9
-Mcu.Pin67=PA8
-Mcu.Pin68=PA9
-Mcu.Pin69=PA10
+Mcu.Pin66=PC8
+Mcu.Pin67=PC9
+Mcu.Pin68=PA8
+Mcu.Pin69=PA9
 Mcu.Pin7=PF5
-Mcu.Pin70=PA11
-Mcu.Pin71=PA12
-Mcu.Pin72=PA13
-Mcu.Pin73=PA14
-Mcu.Pin74=PA15
-Mcu.Pin75=PC10
-Mcu.Pin76=PC11
-Mcu.Pin77=PC12
-Mcu.Pin78=PD0
-Mcu.Pin79=PD1
+Mcu.Pin70=PA10
+Mcu.Pin71=PA11
+Mcu.Pin72=PA12
+Mcu.Pin73=PA13
+Mcu.Pin74=PA14
+Mcu.Pin75=PA15
+Mcu.Pin76=PC10
+Mcu.Pin77=PC11
+Mcu.Pin78=PC12
+Mcu.Pin79=PD0
 Mcu.Pin8=PF7
-Mcu.Pin80=PD2
-Mcu.Pin81=PD3
-Mcu.Pin82=PD4
-Mcu.Pin83=PD6
-Mcu.Pin84=PG10
-Mcu.Pin85=PG11
-Mcu.Pin86=PG12
-Mcu.Pin87=PG13
-Mcu.Pin88=PG14
-Mcu.Pin89=PG15
+Mcu.Pin80=PD1
+Mcu.Pin81=PD2
+Mcu.Pin82=PD3
+Mcu.Pin83=PD4
+Mcu.Pin84=PD6
+Mcu.Pin85=PG10
+Mcu.Pin86=PG11
+Mcu.Pin87=PG12
+Mcu.Pin88=PG13
+Mcu.Pin89=PG14
 Mcu.Pin9=PF8
-Mcu.Pin90=PB3
-Mcu.Pin91=PB5
-Mcu.Pin92=PB6
-Mcu.Pin93=PB8
-Mcu.Pin94=PB9
-Mcu.Pin95=PE0
-Mcu.Pin96=PE1
-Mcu.Pin97=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin98=VP_SYS_VS_tim1
-Mcu.Pin99=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
-Mcu.PinsNb=100
+Mcu.Pin90=PG15
+Mcu.Pin91=PB3
+Mcu.Pin92=PB5
+Mcu.Pin93=PB6
+Mcu.Pin94=PB8
+Mcu.Pin95=PB9
+Mcu.Pin96=PE0
+Mcu.Pin97=PE1
+Mcu.Pin98=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin99=VP_SYS_VS_tim1
+Mcu.PinsNb=101
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -123,6 +125,8 @@ MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -141,7 +145,7 @@ NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0/WKUP.GPIO_Label=B1 [Blue PushButton]
-PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA0/WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0/WKUP.Locked=true
 PA0/WKUP.Signal=GPXTI0
@@ -390,6 +394,10 @@ PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
 PC7.Signal=LTDC_G6
+PC8.GPIOParameters=GPIO_ModeDefaultEXTI
+PC8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC8.Locked=true
+PC8.Signal=GPXTI8
 PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC9.GPIO_Label=I2C3_SDA [ACP/RF_SDA]
 PC9.GPIO_Mode=GPIO_MODE_AF_OD
@@ -924,6 +932,8 @@ SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI3.CalculateBaudRate=5.25 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
