--- a/stm32f429_ugreen_dab.ioc
+++ b/stm32f429_ugreen_dab.ioc
@@ -73,112 +73,109 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PF8
-Mcu.Pin100=PE1
-Mcu.Pin101=VP_DMA2D_VS_DMA2D
-Mcu.Pin102=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin103=VP_RTC_VS_RTC_Activate
-Mcu.Pin104=VP_RTC_VS_RTC_Calendar
-Mcu.Pin105=VP_SYS_VS_tim1
-Mcu.Pin106=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
-Mcu.Pin11=PF9
-Mcu.Pin12=PF10
-Mcu.Pin13=PH0/OSC_IN
-Mcu.Pin14=PH1/OSC_OUT
-Mcu.Pin15=PC0
-Mcu.Pin16=PC1
-Mcu.Pin17=PC2
-Mcu.Pin18=PC3
-Mcu.Pin19=PA0/WKUP
+Mcu.Pin10=PF9
+Mcu.Pin100=VP_RTC_VS_RTC_Activate
+Mcu.Pin101=VP_RTC_VS_RTC_Calendar
+Mcu.Pin102=VP_SYS_VS_tim1
+Mcu.Pin103=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin11=PF10
+Mcu.Pin12=PH0/OSC_IN
+Mcu.Pin13=PH1/OSC_OUT
+Mcu.Pin14=PC0
+Mcu.Pin15=PC1
+Mcu.Pin16=PC2
+Mcu.Pin17=PA0/WKUP
+Mcu.Pin18=PA1
+Mcu.Pin19=PA2
 Mcu.Pin2=PF0
-Mcu.Pin20=PA1
-Mcu.Pin21=PA2
-Mcu.Pin22=PA3
-Mcu.Pin23=PA4
-Mcu.Pin24=PA6
-Mcu.Pin25=PA7
-Mcu.Pin26=PC4
-Mcu.Pin27=PC5
-Mcu.Pin28=PB0
-Mcu.Pin29=PB1
+Mcu.Pin20=PA3
+Mcu.Pin21=PA4
+Mcu.Pin22=PA6
+Mcu.Pin23=PA7
+Mcu.Pin24=PC4
+Mcu.Pin25=PC5
+Mcu.Pin26=PB0
+Mcu.Pin27=PB1
+Mcu.Pin28=PB2/BOOT1
+Mcu.Pin29=PF11
 Mcu.Pin3=PF1
-Mcu.Pin30=PB2/BOOT1
-Mcu.Pin31=PF11
-Mcu.Pin32=PF12
-Mcu.Pin33=PF13
-Mcu.Pin34=PF14
-Mcu.Pin35=PF15
-Mcu.Pin36=PG0
-Mcu.Pin37=PG1
-Mcu.Pin38=PE7
-Mcu.Pin39=PE8
+Mcu.Pin30=PF12
+Mcu.Pin31=PF13
+Mcu.Pin32=PF14
+Mcu.Pin33=PF15
+Mcu.Pin34=PG0
+Mcu.Pin35=PG1
+Mcu.Pin36=PE7
+Mcu.Pin37=PE8
+Mcu.Pin38=PE9
+Mcu.Pin39=PE10
 Mcu.Pin4=PF2
-Mcu.Pin40=PE9
-Mcu.Pin41=PE10
-Mcu.Pin42=PE11
-Mcu.Pin43=PE12
-Mcu.Pin44=PE13
-Mcu.Pin45=PE14
-Mcu.Pin46=PE15
-Mcu.Pin47=PB10
-Mcu.Pin48=PB11
-Mcu.Pin49=PB12
+Mcu.Pin40=PE11
+Mcu.Pin41=PE12
+Mcu.Pin42=PE13
+Mcu.Pin43=PE14
+Mcu.Pin44=PE15
+Mcu.Pin45=PB10
+Mcu.Pin46=PB11
+Mcu.Pin47=PB12
+Mcu.Pin48=PB13
+Mcu.Pin49=PB14
 Mcu.Pin5=PF3
-Mcu.Pin50=PB13
-Mcu.Pin51=PB14
-Mcu.Pin52=PB15
-Mcu.Pin53=PD8
-Mcu.Pin54=PD9
-Mcu.Pin55=PD10
-Mcu.Pin56=PD11
-Mcu.Pin57=PD12
-Mcu.Pin58=PD13
-Mcu.Pin59=PD14
+Mcu.Pin50=PB15
+Mcu.Pin51=PD8
+Mcu.Pin52=PD9
+Mcu.Pin53=PD10
+Mcu.Pin54=PD11
+Mcu.Pin55=PD12
+Mcu.Pin56=PD13
+Mcu.Pin57=PD14
+Mcu.Pin58=PD15
+Mcu.Pin59=PG4
 Mcu.Pin6=PF4
-Mcu.Pin60=PD15
-Mcu.Pin61=PG2
-Mcu.Pin62=PG4
-Mcu.Pin63=PG5
-Mcu.Pin64=PG6
-Mcu.Pin65=PG7
-Mcu.Pin66=PG8
-Mcu.Pin67=PC6
-Mcu.Pin68=PC7
-Mcu.Pin69=PC8
+Mcu.Pin60=PG5
+Mcu.Pin61=PG6
+Mcu.Pin62=PG7
+Mcu.Pin63=PG8
+Mcu.Pin64=PC6
+Mcu.Pin65=PC7
+Mcu.Pin66=PC8
+Mcu.Pin67=PC9
+Mcu.Pin68=PA8
+Mcu.Pin69=PA9
 Mcu.Pin7=PF5
-Mcu.Pin70=PC9
-Mcu.Pin71=PA8
-Mcu.Pin72=PA9
-Mcu.Pin73=PA10
-Mcu.Pin74=PA11
-Mcu.Pin75=PA12
-Mcu.Pin76=PA13
-Mcu.Pin77=PA14
-Mcu.Pin78=PA15
-Mcu.Pin79=PC10
-Mcu.Pin8=PF6
-Mcu.Pin80=PC11
-Mcu.Pin81=PC12
-Mcu.Pin82=PD0
-Mcu.Pin83=PD1
-Mcu.Pin84=PD2
-Mcu.Pin85=PD3
-Mcu.Pin86=PD4
-Mcu.Pin87=PD6
-Mcu.Pin88=PG10
-Mcu.Pin89=PG11
-Mcu.Pin9=PF7
-Mcu.Pin90=PG12
-Mcu.Pin91=PG13
-Mcu.Pin92=PG14
-Mcu.Pin93=PG15
-Mcu.Pin94=PB3
-Mcu.Pin95=PB5
-Mcu.Pin96=PB6
-Mcu.Pin97=PB8
-Mcu.Pin98=PB9
-Mcu.Pin99=PE0
-Mcu.PinsNb=107
+Mcu.Pin70=PA10
+Mcu.Pin71=PA11
+Mcu.Pin72=PA12
+Mcu.Pin73=PA13
+Mcu.Pin74=PA14
+Mcu.Pin75=PA15
+Mcu.Pin76=PC10
+Mcu.Pin77=PC11
+Mcu.Pin78=PC12
+Mcu.Pin79=PD0
+Mcu.Pin8=PF7
+Mcu.Pin80=PD1
+Mcu.Pin81=PD2
+Mcu.Pin82=PD3
+Mcu.Pin83=PD4
+Mcu.Pin84=PD6
+Mcu.Pin85=PG10
+Mcu.Pin86=PG11
+Mcu.Pin87=PG12
+Mcu.Pin88=PG13
+Mcu.Pin89=PG14
+Mcu.Pin9=PF8
+Mcu.Pin90=PG15
+Mcu.Pin91=PB3
+Mcu.Pin92=PB5
+Mcu.Pin93=PB6
+Mcu.Pin94=PB8
+Mcu.Pin95=PB9
+Mcu.Pin96=PE0
+Mcu.Pin97=PE1
+Mcu.Pin98=VP_DMA2D_VS_DMA2D
+Mcu.Pin99=VP_FREERTOS_VS_CMSIS_V1
+Mcu.PinsNb=104
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -445,11 +442,6 @@ PC2.GPIO_PuPd=GPIO_NOPULL
 PC2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC2.Locked=true
 PC2.Signal=GPIO_Output
-PC3.GPIOParameters=PinState,GPIO_Label
-PC3.GPIO_Label=Display_Reset
-PC3.Locked=true
-PC3.PinState=GPIO_PIN_SET
-PC3.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC4.GPIO_Label=OTG_FS_PSO [OTG_FS_PowerSwitchOn]
 PC4.GPIO_Mode=GPIO_MODE_OUTPUT_PP
@@ -746,11 +738,6 @@ PF5.GPIO_PuPd=GPIO_NOPULL
 PF5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF5.Locked=true
 PF5.Signal=FMC_A5
-PF6.GPIOParameters=PinState,GPIO_Label
-PF6.GPIO_Label=Display_CS
-PF6.Locked=true
-PF6.PinState=GPIO_PIN_SET
-PF6.Signal=GPIO_Output
 PF7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF7.GPIO_Label=SPI5_SCK [L3GD20_SCL/SPC]
 PF7.GPIO_Mode=GPIO_MODE_AF_PP
@@ -834,10 +821,6 @@ PG15.GPIO_PuPd=GPIO_NOPULL
 PG15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG15.Locked=true
 PG15.Signal=FMC_SDNCAS
-PG2.GPIOParameters=GPIO_Label
-PG2.GPIO_Label=Display_DC
-PG2.Locked=true
-PG2.Signal=GPIO_Output
 PG4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG4.GPIO_Label=BA0
 PG4.GPIO_Mode=GPIO_MODE_AF_PP
