ili9341: Add new GPIOs

--- a/stm32f429_ugreen_dab.ioc
+++ b/stm32f429_ugreen_dab.ioc
@@ -436,10 +436,10 @@ PC15/OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC2.GPIO_Label=CSX [LCD-RGB_CSX]
+PC2.GPIO_Label=LCD_NCS [LCD-RGB_CSX]
 PC2.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 PC2.GPIO_PuPd=GPIO_NOPULL
-PC2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -510,17 +510,17 @@ PD11.GPIO_PuPd=GPIO_NOPULL
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PD12.GPIO_Label=RDX [LDC-RGB_RDX]
+PD12.GPIO_Label=LCD_RDX [LDC-RGB_RDX]
 PD12.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 PD12.GPIO_PuPd=GPIO_NOPULL
-PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PD13.GPIO_Label=WRX_DCX [LCD-RGB_WRX_DCX]
+PD13.GPIO_Label=LCD_WRX [LCD-RGB_WRX_DCX]
 PD13.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 PD13.GPIO_PuPd=GPIO_NOPULL
-PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PD13.Locked=true
 PD13.Signal=GPIO_Output
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
