--- a/stm32f429_ugreen_dab.ioc
+++ b/stm32f429_ugreen_dab.ioc
@@ -435,12 +435,13 @@ PC15/OSC32_OUT.GPIOParameters=GPIO_Label
 PC15/OSC32_OUT.GPIO_Label=PC15-OSC32_OUT
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PC2.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC2.GPIO_Label=LCD_NCS [LCD-RGB_CSX]
 PC2.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 PC2.GPIO_PuPd=GPIO_NOPULL
 PC2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC2.Locked=true
+PC2.PinState=GPIO_PIN_SET
 PC2.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC4.GPIO_Label=OTG_FS_PSO [OTG_FS_PowerSwitchOn]
